# oncoemotion

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-lock.txt
configs/: experiment.yaml  model.yaml  terminology.yaml
dashboard/: streamlit_app.py
data/: README.md
data/synthetic/: clinical_controls.jsonl  emotion_dataset.jsonl
data/templates/: clinical_controls_template.yaml  emotion_concepts_template.yaml
docs/: COMPARISON.md  MULTIMODEL.md  RELAZIONE.md  REPORT.md
notebooks/: 02_layer_sweep.ipynb  03_emotion_geometry.ipynb  04_clinical_probing.ipynb  05_causal_interventions.ipynb  README.md  colab_multimodel.ipynb
outputs/: README.md
scripts/: README.md  analyze_results.py  build_comparison_report.py  build_terminology.py  build_vectors.py  compare_models.py  extract_activations.py  extract_ctcae_v6.py  extract_pro_ctcae_italian.py  generate_clinical_controls.py  generate_emotion_dataset.py  run_all_models.py  run_mapping_baseline.py  run_patching.py  run_probing.py  run_steering.py  validate_vectors.py  visualize_internals.py
src/oncoemotion/: __init__.py  config.py  factory.py  schemas.py
terminology/: ctcae_italian_bridge.json  ctcae_loader.py  ctcae_v6_synthetic.json  pro_ctcae_loader.py
tests/: conftest.py
tests/integration/: test_api.py
tests/regression/: test_required_cases.py
tests/unit/: test_clinical.py  test_emotion_vectors.py  test_hooks.py  test_mapping_baseline.py  test_patching_runtime.py  test_preprocessing.py  test_safety.py  test_steering_runtime.py  (+2 more)
(+43 files in other folders)
