[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oncoemotion"
version = "0.1.0"
description = "PRO-CTCAE/CTCAE mapping + emotion-concept mechanistic interpretability for oncology symptom free-text."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "oncoemotion project" }]
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6",
    "numpy>=1.26",
    "rapidfuzz>=3",
]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn>=0.30"]
dev = ["pytest>=8", "httpx>=0.27", "fastapi>=0.115", "uvicorn>=0.30"]
# Heavy ML stack for Phases 2-4. Install separately; on the T1000 use a CUDA
# build of torch (cu121) and dtype=float16 (Turing has no efficient bf16).
ml = [
    "torch>=2.2",
    "transformers>=4.44",
    "accelerate>=0.33",
    "sentence-transformers>=3.0",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "matplotlib>=3.8",
]
viz = ["streamlit>=1.36", "matplotlib>=3.8", "plotly>=5.20"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
